@@ -1,3 +1,11 @@
+2024-04-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* tfm.c: Fix segfaults.
+	* dvipdfmx-upjf2.test, tests/UPJF-UTF16-{H,V},
+	tests/upjf-hara.map: Update tests.
+	https://github.com/texjporg/tex-jp-build/issues/46
+	* configure.ac: version 20240427.
+
 2024-04-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* tfm.{c,h}, vf.c: Support upTeX new encoding
